conformance/tests/httproute-weight.yaml
# Copyright IBM Corp. 2019, 2022
# SPDX-License-Identifier: Apache-2.0

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: weighted-backends
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: same-namespace
  rules:
  - backendRefs:
    - name: infra-backend-v1
      port: 8080
      weight: 70
    - name: infra-backend-v2
      port: 8080
      weight: 30
    - name: infra-backend-v3
      port: 8080
      weight: 0
